force-app/main/default/objects/Channel_Sales_Count__c/Channel_Sales_Count__c.object-meta.xml
<CustomObject>
    <label>Channel Sales Count</label>
    <nameField>
        <label>Channel Sales Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Sales Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>