force-app/main/default/objects/Channel_Sales_Count__c/fields/Per_Capita__c.field-meta.xml
<CustomField>
    <fullName>Per_Capita__c</fullName>
    <label>Per Capita</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>