force-app/main/default/objects/Channel_Sales_Count__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>