force-app/main/default/objects/Channel_Sales_Count__c/fields/Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Revenue__c</fullName>
    <label>Sales Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>