force-app/main/default/objects/Channel_Sales_Count__c/fields/Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume__c</fullName>
    <label>Sales Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>