force-app/main/default/objects/Channel_Sales_Count__c/fields/Shop_Num__c.field-meta.xml
<CustomField>
    <fullName>Shop_Num__c</fullName>
    <label>Shop Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>