force-app/main/default/objects/Channel_Sales_Count__c/fields/Spm_Qty__c.field-meta.xml
<CustomField>
    <fullName>Spm_Qty__c</fullName>
    <label>Spm Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>