force-app/main/default/objects/Channel_Sales_Count__c/fields/Store_Average__c.field-meta.xml
<CustomField>
    <fullName>Store_Average__c</fullName>
    <label>Store Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>