force-app/main/default/objects/Channel_Sales_Count__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Date__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Channel_Name__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Type__c</columns>
    <columns>Shop_Num__c</columns>
    <columns>Spm_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>